--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-wedding-car"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Regular Ride</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>ShuttleSwift offers shared rides, allowing users to save costs by sharing the vehicle with other passengers traveling in the same direction.
+                  .</p>
               </div>
             </div>
 					</div>
@@ -264,7 +265,7 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Sceduled Ride</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>Users can schedule rides in advance, ensuring timely transportation, and fix a package based on their regular needs.</p>
               </div>
             </div>
 					</div>
@@ -273,7 +274,7 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-car"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Shuttle for Women</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>ShuttleSwift ensures the safety and comfort of women passengers by providing dedicated vehicles exclusively for women</p>
               </div>
             </div>
 					</div>
@@ -282,7 +283,7 @@
             	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-transportation"></span></div>
             	<div class="text w-100">
                 <h3 class="heading mb-2">Premium Service</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <p>ShuttleSwift is always ready to ensure quality service. Beside it provides special premium service for the users in premium booking</p>
               </div>
             </div>
 					</div>
@@ -290,7 +291,7 @@
 			</div>
 		</section>
 
-		<section class="ftco-section ftco-intro" style="background-image: url(images/bg_3.jpg);">
+		<section class="ftco-section ftco-intro" style="background-image: url(images/bg_3_1.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row justify-content-end">
@@ -479,7 +480,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2"><a href="#" class="logo">Shuttle<span>Swift</span></a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Experience a new era of smart travel empowered by cutting-edge technology with us. Enjoy your comfortable and affordable journey with ease.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
