--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </form>
     <p style="margin: 0;">or</p>
     <div>
-      <i class="fa-brands fa-google" style="color: green;"></i>
       <i class="fa-brands fa-facebook" style="color: blue;"></i>
+      <img style="width: auto;height: 20px;margin: 0 7px 0 7px;" src="images/google.png" alt="">
       <i class="fa-brands fa-linkedin" style="color: blue;"></i>
     </div>
   </div>
