--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 </div>
 
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bgService2.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -175,10 +175,9 @@
           
           </div>
         </div>
+        <h2 style="text-align: center;" class="mb-3">Our Location</h2>
         <div class="row justify-content-center">
-        	<div class="col-md-12">
-        		<div id="map" class="bg-white"></div>
-        	</div>
+        		<div><img src="./images/map.jpg" alt=""></div>
         </div>
       </div>
     </section>
